beginning of db
